// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tooltip Tooltip HighScore 1`] = `
<View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="undefined"
    bbWidth="undefined"
    color="#FFFFFF"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "bottom": 0,
          "height": 14,
          "left": 0,
          "position": "absolute",
          "width": 16,
        },
        false,
        undefined,
      ]
    }
    vbHeight={14}
    vbWidth={17}
  >
    <RNSVGPath
      d="M16.6 14H.6C3.7 11.4 5.2 6.9 5 .6L16.3.5"
      fill={
        Array [
          0,
          1,
          1,
          1,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGSvgView>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 5,
        "elevation": 4,
        "flexDirection": "row",
        "marginLeft": 5,
        "marginRight": 1,
        "padding": 16,
        "shadowColor": "#14171A",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ECEFF1",
          "borderRadius": 19,
          "height": 38,
          "justifyContent": "center",
          "width": 38,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="undefined"
        bbWidth="undefined"
        color="#fca833"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "height": 21,
              "width": 21,
            },
            false,
            undefined,
          ]
        }
        vbHeight={16}
        vbWidth={16}
      >
        <RNSVGPath
          d="M8 0l1.888 6.111H16L11.056 9.89 12.944 16 8 12.223 3.056 16l1.888-6.111L0 6.11h6.112z"
          fill={
            Array [
              0,
              0.9882352941176471,
              0.6588235294117647,
              0.2,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            style={Object {}}
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 15,
                  }
                }
              >
                You have a new highscore
              </Text>
            </Text>
            <Text
              style={
                Object {
                  "flex": 1,
                  "height": 16.8,
                }
              }
            >
              

            </Text>
            <Text
              selectable={false}
              style={
                Array [
                  Object {
                    "fontWeight": "500",
                  },
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                selectable={false}
                style={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#14171A",
                      "fontSize": 15,
                      "fontWeight": "500",
                    }
                  }
                >
                  you just won +17 stars
                </Text>
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Tooltip Tooltip Unlocked 1`] = `
<View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="undefined"
    bbWidth="undefined"
    color="#FFFFFF"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "bottom": 0,
          "height": 14,
          "left": 0,
          "position": "absolute",
          "width": 16,
        },
        false,
        undefined,
      ]
    }
    vbHeight={14}
    vbWidth={17}
  >
    <RNSVGPath
      d="M16.6 14H.6C3.7 11.4 5.2 6.9 5 .6L16.3.5"
      fill={
        Array [
          0,
          1,
          1,
          1,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGSvgView>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 5,
        "elevation": 4,
        "flexDirection": "row",
        "marginLeft": 5,
        "marginRight": 1,
        "padding": 16,
        "shadowColor": "#14171A",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ECEFF1",
          "borderRadius": 19,
          "height": 38,
          "justifyContent": "center",
          "width": 38,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="undefined"
        bbWidth="undefined"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "height": 21,
              "width": 21,
            },
            false,
            undefined,
          ]
        }
        vbHeight={25}
        vbWidth={16}
      >
        <RNSVGPath
          d="M1.27 7.231l.903 5.121 1.477-.26-.903-5.121a4.481 4.481 0 0 1 3.65-5.213L6.137.28C2.887.854.697 3.98 1.27 7.23"
          fill={
            Array [
              0,
              0.5529411764705883,
              0.5529411764705883,
              0.5529411764705883,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M13.406 7.528l-1.477.26-.417-2.363c-.434-2.462-2.751-4.084-5.115-3.667L6.137.28c3.25-.574 6.378 1.617 6.95 4.866l.319 2.381z"
          fill={
            Array [
              0,
              0.8156862745098039,
              0.8156862745098039,
              0.8156862745098039,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M8.3 11.4H1.6c-.6 0-1.2.5-1.2 1.2v10.8c0 .6.5 1.2 1.2 1.2h6.7V11.4"
          fill={
            Array [
              0,
              0.9647058823529412,
              0.803921568627451,
              0.3568627450980392,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M8.2 11.4h6.6c.6 0 1.1.5 1.1 1.2v10.8c0 .6-.5 1.2-1.1 1.2H8.2V11.4"
          fill={
            Array [
              0,
              0.9607843137254902,
              0.6862745098039216,
              0.24705882352941178,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M1.5 23.4h6.9V12.5H1.5z"
          fill={
            Array [
              0,
              0.9607843137254902,
              0.6862745098039216,
              0.24705882352941178,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M8.2 23.4h6.6V12.5H8.2z"
          fill={
            Array [
              0,
              0.9647058823529412,
              0.803921568627451,
              0.3568627450980392,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M9.8 16.7c0-.9-.7-1.6-1.6-1.6-.9 0-1.6.7-1.6 1.6s.7 1.6 1.6 1.6c.8.1 1.6-.7 1.6-1.6"
          fill={
            Array [
              0,
              0.011764705882352941,
              0.2549019607843137,
              0.34509803921568627,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
        <RNSVGPath
          d="M8.9 16.7c0-.4-.4-.8-.8-.8s-.8.4-.8.8V20c0 .4.4.8.8.8s.8-.4.8-.8v-3.3"
          fill={
            Array [
              0,
              0.011764705882352941,
              0.2549019607843137,
              0.34509803921568627,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        />
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            style={Object {}}
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 15,
                  }
                }
              >
                You have just unlocked
              </Text>
            </Text>
            <Text
              style={
                Object {
                  "flex": 1,
                  "height": 16.8,
                }
              }
            >
              

            </Text>
            <Text
              selectable={false}
              style={
                Array [
                  Object {
                    "fontWeight": "500",
                  },
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                selectable={false}
                style={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#14171A",
                      "fontSize": 15,
                      "fontWeight": "500",
                    }
                  }
                >
                  coach level
                </Text>
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
